--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "3.6.9"
 google-cloud-bigquery = "^2.17.0"
+pyserial = "^3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
